# sda-lab5

./: CMakeLists.txt  LICENSE  README.md  TODO.md
docs/: uml_diagram.txt
src/: AlarmObserver.cpp  DisplayObserver.cpp  Sensor.cpp  TemperatureSensor.cpp
tests/: test_observer.cpp
